# CampusRainhub

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md  data_insert.sql  data_insert2.0.sql  draft.sql  test_sql.sql  系统详细设计与分析.md
Model/: User.h
admin/: AdminMainWindow.cpp
client/: MainWindow.cpp  SlotItem.cpp
sql/: data_insert.sql  data_insert2.0.sql  init_db.sql  test_sql.sql
src/Model/: BorrowRecord.h  GlobalEnum.hpp  RainGear.hpp  RainGearFactory.h  RainGear_subclasses.hpp  StationUtils.cpp  StationUtils.h  Stationlocal.cpp  Stationlocal.h  User.cpp  User.h
src/admin/: MainWindow.cpp  MainWindow.h  main.cpp
src/admin_ui/: MainWindow.cpp  MainWindow.h
src/client_ui/assets/: Styles.h
src/client_ui/pages/: AuthPages.h  DashboardPage.cpp  MapPage.cpp
src/control/: Admin_GearService.cpp  Admin_GearService.h  AuthService.h  BorrowService.cpp  BorrowService.h  StationService.cpp  StationService.h
src/dao/: GearDao.cpp  GearDao.h  RecordDao.cpp  RecordDao.h  StationDao.cpp  StationDao.h  UserDao.cpp  UserDao.h
src/utils/: ConnectionPool.cpp  ConnectionPool.h
